--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,17 @@
-/* Ensure the body has margin and padding set to avoid overflow */
-body {
-    margin: 0;
-    padding: 0;
-    background-color: white;
-}
-
 .star {
-    position: absolute;
-    top: 50px;
-    left: 50px;
-    display: inline-block;
-    color: yellow;
-    width: 0;
-    height: 0;
-    border-right: 100px solid transparent;
-    border-bottom: 70px solid yellow;
-    border-left: 100px solid transparent;
-    transform: rotate(35deg);
-}
-
-.star:before {
-    border-bottom: 80px solid yellow;
-    border-left: 30px solid transparent;
-    border-right: 30px solid transparent;
-    position: absolute;
-    height: 0;
-    width: 0;
-    top: -45px;
-    left: -65px;
-    display: block;
-    content: '';
-    transform: rotate(-35deg);
-}
-
-.star:after {
-    position: absolute;
-    display: block;
-    color: yellow;
-    top: 3px;
-    left: -105px;
-    width: 0;
-    height: 0;
-    border-right: 100px solid transparent;
-    border-bottom: 70px solid yellow;
-    border-left: 100px solid transparent;
-    transform: rotate(-70deg);
-    content: '';
+  width: 100px;
+  height: 100px;
+  background-color: yellow;
+  clip-path: polygon(
+    50% 0%,
+    61% 35%,
+    98% 35%,
+    68% 57%,
+    79% 91%,
+    50% 70%,
+    21% 91%,
+    32% 57%,
+    2% 35%,
+    39% 35%
+  );
 }
